--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "game-programmer"]
 	path = game-programmer
 	url = https://github.com/miloyip/game-programmer.git
+[submodule "LearningJapanese"]
+	path = LearningJapanese
+	url = https://github.com/IceFox99/LearningJapanese.git
